--- a/SessionTimeOut/Views/Dashboard/Index.cshtml
+++ b/SessionTimeOut/Views/Dashboard/Index.cshtml
@@ -1,9 +1,15 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    
-
 }
 
 <h2>Status: </h2>
 <h2 id="status-session-time">Off</h2>
+
+Archivos:
+
+<ul>
+    <li>/Scripts/session.time.js</li>
+    <li>/Views/Shared/_Layout.cshtml</li>
+    <li>/Views/Shared/_Layout_Login.cshtml</li>
+</ul>
