--- a/SessionTimeOut/Views/Shared/_Layout.cshtml
+++ b/SessionTimeOut/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - SessionTimeout</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
@@ -17,11 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("SessionTimeout", "Index", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
-                <ul class="nav navbar-nav">@Html.ActionLink("Logout", "closesession", "dashboard", new { area = "" }, new { @class = "navbar-brand" })</ul>
+                <ul class="nav navbar-nav">@Html.ActionLink("Pag1", "Pag1", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })</ul>
+                <ul class="nav navbar-nav">@Html.ActionLink("Pag2", "Pag2", "Dashboard", new { area = "" }, new { @class = "navbar-brand" })</ul>
+                <ul class="nav navbar-nav"></ul>
+                <ul class="nav navbar-nav">@Html.ActionLink("Logout", "CloseSession", "Home", new { area = "" }, new { @class = "navbar-brand" })</ul>
             </div>
         </div>
     </div>
@@ -58,7 +61,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - josuemercally@gmail.com</p>
         </footer>
     </div>
 
